--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Rudra Gaur",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "prettier": "^3.2.4"
   },
   "dependencies": {
     "dotenv": "^16.3.2"
